--- a/google.css
+++ b/google.css
@@ -1,7 +1,57 @@
-body {
-    background-color:#FFEBC9;
+#google {
+    text-align: center;
+   
+}
+.container {
+    width: 993.600px;
+    height: 145.600px;
+    margin: auto;
+}
+ .center {
+    text-align: center;
+   background-color: #EEEEEE; 
+   width: 939.28px;
+   height: 64.4px;
+   
+     
+ }
+ .bar {
+    text-align: center;
+    float: left;
+    margin-top: 1px;
+
+ }
+ .left-bar {
+    
+    width: 346.34px;
+    height: 81px;
+    background-color: #7EE5DA;
+    margin-right: 2px;
+
+
+ }
+ .mid-bar {
+   
+    width: 187.48px;
+    height: 81px;
+    background-color: #70CCC2;
+    font-size: smaller;
+    
+     
+}
+.right-bar {
+    
+    width:402.26px;
+    height: 81px;
+    background-color: #62B3AA;
+    margin-left: 2px;
+    font-size: smaller;
+    
 }
 
-.center { 
-    color: aqua;
+.searchbox {
+    position:fixed;
+    left:595px;
+    top: 162px;
+    width: 300px;
 }
